<resources>
    <string name="app_name">Awave</string>
    <string name="cd_company_logo">Company logo</string>
    <string name="cl_home_airport">Illustration of a person waiting in the airport</string>
    <string name="msg_no_itinerary">You don\'t have any itinerary yet</string>
    <string name="msg_start_creating">Start by creating your next itinerary</string>
    <string name="error_load_itineraries">It was not possible to load your itineraries. Please, try again later</string>
    <string name="action_create">Create</string>

    <!-- Cities -->
    <string name="title_city_paris">Paris</string>
    <string name="title_desc_paris">City of the lights</string>
    <string name="title_city_london">London</string>
    <string name="title_desc_london">The swinging city</string>
    <string name="title_city_berlin">Berlin</string>
    <string name="title_desc_berlin">Unexpected capital</string>
    <string name="title_your_itineraries"><![CDATA[Your <b>itineraries</b>]]></string>
    <string name="action_create_itinerary">Create itinerary</string>
    <string name="title_where_next">Where next?</string>
    <string name="msg_create_itinerary_name_hint">One day in Paris</string>
    <string name="action_confirm">Confirm</string>

</resources>